# neuro-int-mamba

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json  ty.toml
.github/workflows/: README.md  ci.yml  publish.yml
docs/: architecture.tex
neuro_int_mamba/: __init__.py  data.py  model.py  nn.py
scripts/: emg_alignment.py  pretrain_emg.py  setup_data.py  simulate_mujoco.py  simulate_sapien.py
simulation/: dex_robot.xml
tests/: test_model.py  test_simulation_logic.py
typings/mujoco/: __init__.pyi  viewer.pyi
