[project]
name = "neuro-int-mamba"
version = "0.1.0"
description = "A Bio-inspired Mamba Architecture for Dexterous Manipulation with Intrinsic Neural Timescales"
readme = "README.md"
authors = [
    { name = "tin", email = "shisoratsu@icloud.com" }
]
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "mujoco>=3.4.0",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "torch>=2.9.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/neuro-int-mamba"
Repository = "https://github.com/yourusername/neuro-int-mamba"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neuro_int_mamba"]

[tool.ruff]
line-length = 100
target-version = "py313"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
    "ty>=0.0.2",
]
